@@ -1,3 +1,8 @@
+2022-06-22  Milian Wolff <mail@milianw.de>
+
+	* libdwfl.h, debuginfod-client.c (dwfl_get_debuginfod_client):
+	Rename get_client to dwfl_get_debuginfod_client and make it public.
+
 2022-05-15  Mark Wielaard  <mark@klomp.org>
 
 	* libdwfl.h (dwfl_module_addrinfo): Update docs and nonnull
